Fix: fix overflow when center content is too large
fix overflow when center content is too large

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -136,5 +136,6 @@
 	padding: 0 10px;
 	padding-top: 10px;
 	z-index: 0;
+	overflow: hidden;
 	/* border: 1px solid red; *//* debugger */
 }
